Overflow problem solved

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   }
   body {
     display: flex;
+    height: 100vh;
   }
   ::placeholder{
     color: #fff;
@@ -10,7 +11,7 @@
   #leftBox {
     width: 730px;
     background-color: gray;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,7 +25,7 @@
   #rightBox {
     width: 800px;
     background-color: antiquewhite;
-    height: 100vh;
+    height: 100%;
     margin: auto;
     text-align: center;
     background-image: url("https://cdn.pixabay.com/photo/2017/07/28/14/10/background-2548758_1280.jpg");
@@ -45,6 +46,8 @@
     font-size: 25px;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.717);
     border: none;
+    overflow: auto;
+
   }
 
   .noteBox {
